# nf-interpreter

./: .clang-format  .coderabbit.yaml  .dockerignore  .editorconfig  .gitattributes  .github_changelog_generator  .gitignore  .gitmodules  .project  .travis.yml  .typo-ci.yml  BuildNF.bat  CHANGELOG.md  CHANGE_LOG.md  CHIBIOS_STM32F4xx_GCC_options.cmake  CHIBIOS_STM32F4xx_sources.cmake  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.SAMPLE.json  CMakeSettings.json  CMakeUserFunctions.cmake  CMakeUserPresets.CI.json  CMakeUserPresets.SKY_EEVB_PROTO1.json  CMakeUserPresets.TEMPLATE.json  CODE_KEEPERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CopyBuildOutput.cmd  FindCHIBIOS.cmake  GetShortPath.bat  GitVersion.yml  Kconfig  Kconfig.apis  Kconfig.build  Kconfig.features  Kconfig.graphics  Kconfig.mcuboot  Kconfig.networking  (+50 more)
MCUboot/: CMakeLists.txt  test-serial-recovery.ps1  version.json
MCUboot/common/: MCUboot_Image.c  MCUboot_Runtime.c  MCUboot_StartupPolicy.c  base64_impl.c  crc16_ccitt.c  flash_map_extend.c
MCUboot/docs/: multi-image-wire-protocol.md  upgrade-strategy.md
MCUboot/include/: MCUboot_Image.h  MCUboot_RuntimeInterface.h  MCUboot_StartupPolicy.h
MCUboot/include/base64/: base64.h
MCUboot/include/bsp/: bsp.h
MCUboot/include/crc/: crc16.h
MCUboot/include/flash_map_backend/: flash_map_backend.h
MCUboot/include/hal/: hal_flash.h  hal_system.h
MCUboot/include/mcuboot_config/: mcuboot_config.h  mcuboot_logging.h
MCUboot/include/os/: endian.h  os.h  os_cputime.h  os_heap.h  os_malloc.h
MCUboot/include/sysflash/: sysflash.h
MCUboot/keys/: README.md  dev-signing-key.pem  root-ec256.pem  signing_pub_key.c
MCUboot/port/esp32/: bootloader.conf  flash_map_esp32.c  mcuboot_esp32_config.h
MCUboot/port/stm32/: flash_map_stm32.c  mcuboot_stm32_config.h
bootloader_components/nf_boot_message/: CMakeLists.txt  boot_msg.c
source/: CMakeLists.txt  FreeRTOSConfig.h  RTE_Components.h  RTX_Conf_CM_RTX.c  main.c  stm32f0_handlers.c  stm32f0xx_hal_conf.h  stm32f4xx_hal_conf.h
targets/AzureRTOS/: CMakeLists.txt  CMakePresets.json
targets/AzureRTOS/ChibiOS/: osal.c  osal.h
targets/AzureRTOS/Maxim/: CMakeLists.txt
targets/AzureRTOS/MicroBit/: CMakeLists.txt
targets/AzureRTOS/Nordic/: CMakeLists.txt
targets/AzureRTOS/RaspberryPi/: CMakeLists.txt
targets/AzureRTOS/ST/: CMakeLists.txt
targets/AzureRTOS/STM32L4_L4+/: CMakeLists.txt  cmake-variants.json  launch.json
targets/AzureRTOS/ST_B_L475E_IOT01A/: CMakeLists.txt  cmake-variants.json
targets/AzureRTOS/SiliconLabs/: CMakeLists.txt  README.md
targets/AzureRTOS/_common/: CMakeLists.txt  LaunchCLR.c  StdioPort.cpp  WireProtocol_ReceiverThread.c  platform_heap.c  rules_bootclipboard.ld  rules_clr.ld  rules_code.ld  targetHAL.c  targetHAL_Rtos.c  targetHAL_Time.cpp  targetHAL_network.cpp  target_network.cpp
targets/AzureRTOS/_include/: platform.h
targets/AzureRTOS/cmake/: utilities.cmake
targets/CMSIS-OS/ChibiOS/: CMakeLists.txt  Quail.7z
targets/ChibiOS/: CMakeLists.txt  CMakePresets.json  Kconfig
targets/ChibiOS/Include/: LaunchCLR.h  Target_BlockStorage_STM32FlashDriver.h  WireProtocol_ReceiverThread.h  targetHAL_Time.h
targets/ChibiOS/MXCHIP_AZ3166/: CMakeLists.txt  CMakePresets.json  MCUboot-flash-layout.md  README.md  board.c  board.h  defconfig  launch.json  target_common.h.in  target_system_device_adc_config.cpp  target_system_device_i2c_config.cpp  target_system_device_spi_config.cpp  target_system_io_ports_config.cpp  target_system_io_ports_config.h  wiced_sdk.h
targets/ChibiOS/NETDUINO3_WIFI/: CMakeLists.txt  board.c  board.h  cmake-variants.json  target_common.h.in  target_nf_devices_onewire_config.cpp  target_system_device_adc_config.cpp  target_system_device_spi_config.cpp  target_system_io_ports_config.cpp  target_system_io_ports_config.h  target_windows_devices_adc_config.cpp  target_windows_devices_i2c_config.cpp  target_windows_devices_serialcommunication_config.cpp  target_windows_devices_serialcommunication_config.h  target_windows_devices_spi_config.cpp
targets/ChibiOS/ORGPAL_PALTHREE/: CMakeLists.txt  CMakePresets.json  MCUboot-flash-layout.md  README.md  board.h  cmake-variants.json  defconfig  ffconf.h  lfs_config.h  mbedtls_config.h  mcuboot_config.h  spiffs_config.h  stm32f7xx_hal_conf.h  target_BlockStorage.c  target_FileSystem.cpp  target_common.h.in  target_ext_flash.h  target_external_memory.c  target_littlefs.c  target_littlefs.h  target_mpu_config.c  target_nf_dev_onewire_config.cpp  target_nf_devices_onewire_config.cpp  target_spiffs.c  target_storage_config.h  target_system_device_adc_config.cpp  target_system_device_i2c_config.cpp  target_system_device_spi_config.cpp  target_windows_devices_adc_config.cpp  target_windows_devices_i2c_config.cpp  target_windows_devices_spi_config.cpp  target_windows_storage_config.h
targets/ChibiOS/ORGPAL_PALX/: CMakeLists.txt  CMakePresets.json  MCUboot-flash-layout.md  README.md  board.c  board.h  defconfig  ffconf.h  launch.json  mbedtls_config.h  stm32f7xx_hal_conf.h  target_FileSystem.cpp  target_ext_flash.h  target_external_memory.c  target_littlefs.c  target_littlefs.h  target_spiffs.c  target_spiffs.h  target_system_device_adc_config.cpp  target_system_io_ports_config.cpp  target_system_io_ports_config.h
targets/ChibiOS/PICO2_RP2350/: CMakePresets.json  README.md  Target_BlockStorage_RP2350FlashDriver.c  board.c  board.h  defconfig  target_littlefs.c  target_stubs.cpp  target_system_device_adc_config.cpp
targets/ChibiOS/PICO2_RP2350_W/: CMakePresets.json  README.md  board.c  board.h  (+4 more)
targets/ESP32/: CMakeLists.txt  CMakePresets.json  Kconfig  Kconfig.ethernet
targets/FreeRTOS/: CMakeLists.txt  CMakePresets.json  Kconfig
targets/FreeRTOS_ESP32/: CMakeLists.txt
targets/Nordic/: CMakeLists.txt  README.md
targets/TI-SimpleLink/: CMakeLists.txt
targets/TI_SimpleLink/: CMakeLists.txt  CMakePresets.json  Kconfig
targets/ThreadX/: CMakeLists.txt  Kconfig
targets/osx/: CMakeLists.txt  README.md
targets/posix/: CMakeLists.txt  README.md  toolchain-aarch64-linux-gnu.cmake
(+6654 files in other folders)
